--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,10 @@
             <artifactId>persian-date-time</artifactId>
             <version>4.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
