--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -38,3 +38,8 @@ spring:
   servlet:
     multipart:
       enabled: true
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
