--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,9 @@ spring:
     redis:
       host: localhost
       port: 6379
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9090/realms/OEP
